Fix some spacing.

--- a/src/QualityBitDepthControl.module.scss
+++ b/src/QualityBitDepthControl.module.scss
@@ -4,7 +4,7 @@
 
 .qualityBitDepthWrapper {
   max-width: 400px;
-  margin-bottom: $spacer * 2;
+  margin-bottom: 2rem;
 
   .label {
     margin-bottom: 2rem;
