--- a/src/WaveformEdit.module.scss
+++ b/src/WaveformEdit.module.scss
@@ -6,7 +6,6 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  margin-bottom: 1rem;
 
   & > * {
     margin-bottom: 1rem;
